# CoolEq

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  linux_build.sh  linux_debug.sh  linux_env.sh  platformio.ini
.github/workflows/: test_polar_alignment.yml
.trae/documents/: onstepx-prd.md  onstepx-technical-architecture.md
docs/: AXIS_Missing_Consequences.md  Build_with_CMake.md  Config_Example.h  design_concept.md  guide_scope_design.md  mechanical_concept.md  onstep-prd.md  onstep-technical-architecture.md  project-plan.md  project_development_plan.md
examples/: polar_align_demo.py
src/function/PolarAlignment/: README.md  pyproject.toml
src/function/PolarAlignment/src/: aligner.py  camera.py  iers_manager.py  mount.py  solver.py
src/function/PolarAlignment/tests/: test_polar_alignment.py
